[project]
name = "receipt-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "requests>=2.31.0",
    "langgraph>=1.0.2",
    "langchain-community>=0.4.1",
    "langgraph-cli[inmem]>=0.4.7",
    "pillow>=12.0.0",
]


[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.3",
    "types-requests>=2.32.4.20250913",
]

[tool.black]
line-length = 134
target-version = ['py313']

[tool.ruff]
line-length = 134
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["receipt_splitter"]
